[gd_scene load_steps=14 format=3 uid="uid://dxwllps4lu0n6"]

[ext_resource type="Script" path="res://Scripts/Boss_Room.gd" id="1_10qt2"]
[ext_resource type="PackedScene" uid="uid://vnqwt7jk3dgc" path="res://Scenes/BossRoom_real.tscn" id="2_cj46h"]
[ext_resource type="PackedScene" uid="uid://db8wbmnwmxtm8" path="res://Scenes/Player.tscn" id="3_efvos"]
[ext_resource type="PackedScene" uid="uid://caqs5eoyufh4q" path="res://Scenes/enemies/enemy_boss.tscn" id="4_cvhi0"]
[ext_resource type="Texture2D" uid="uid://7qf86gblqpic" path="res://Images/dungeon-pack-full_version/rpgmaker/MV/tilesets/_srw_tileset_1.png" id="5_o1teu"]
[ext_resource type="AudioStream" uid="uid://q0kh84qv4gms" path="res://sounds/boss_fight.mp3" id="6_mex8g"]
[ext_resource type="AudioStream" uid="uid://bs8pl6cq8hjuy" path="res://sounds/fire_sound_effect.mp3" id="7_42uki"]
[ext_resource type="AudioStream" uid="uid://dnfw071mus5dj" path="res://sounds/freezing.mp3" id="8_m0v3b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3c7ns"]
texture = ExtResource("5_o1teu")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
40:0/0 = 0
41:0/0 = 0
42:0/0 = 0
43:0/0 = 0
44:0/0 = 0
45:0/0 = 0
46:0/0 = 0
47:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
42:1/0 = 0
43:1/0 = 0
44:1/0 = 0
45:1/0 = 0
46:1/0 = 0
47:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
47:2/0 = 0
0:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
41:4/0 = 0
42:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
42:6/0 = 0
43:6/0 = 0
44:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
44:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
35:8/0 = 0
36:8/0 = 0
39:8/0 = 0
40:8/0 = 0
41:8/0 = 0
42:8/0 = 0
43:8/0 = 0
44:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
39:9/0 = 0
40:9/0 = 0
41:9/0 = 0
42:9/0 = 0
43:9/0 = 0
44:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
42:10/0 = 0
43:10/0 = 0
44:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
40:11/0 = 0
41:11/0 = 0
42:11/0 = 0
43:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
37:12/0 = 0
38:12/0 = 0
39:12/0 = 0
40:12/0 = 0
41:12/0 = 0
42:12/0 = 0
43:12/0 = 0
44:12/0 = 0
45:12/0 = 0
46:12/0 = 0
47:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
37:13/0 = 0
38:13/0 = 0
39:13/0 = 0
40:13/0 = 0
41:13/0 = 0
42:13/0 = 0
43:13/0 = 0
44:13/0 = 0
45:13/0 = 0
46:13/0 = 0
47:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
36:14/0 = 0
37:14/0 = 0
38:14/0 = 0
39:14/0 = 0
40:14/0 = 0
41:14/0 = 0
42:14/0 = 0
43:14/0 = 0
44:14/0 = 0
45:14/0 = 0
46:14/0 = 0
47:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0
36:15/0 = 0
37:15/0 = 0
38:15/0 = 0
39:15/0 = 0
40:15/0 = 0
42:15/0 = 0
43:15/0 = 0
44:15/0 = 0
45:15/0 = 0
46:15/0 = 0
47:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
32:16/0 = 0
33:16/0 = 0
34:16/0 = 0
35:16/0 = 0
36:16/0 = 0
37:16/0 = 0
38:16/0 = 0
39:16/0 = 0
40:16/0 = 0
41:16/0 = 0
42:16/0 = 0
43:16/0 = 0
44:16/0 = 0
45:16/0 = 0
46:16/0 = 0
47:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
32:17/0 = 0
33:17/0 = 0
34:17/0 = 0
35:17/0 = 0
36:17/0 = 0
37:17/0 = 0
38:17/0 = 0
39:17/0 = 0
40:17/0 = 0
41:17/0 = 0
42:17/0 = 0
43:17/0 = 0
44:17/0 = 0
45:17/0 = 0
46:17/0 = 0
47:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
31:18/0 = 0
32:18/0 = 0
33:18/0 = 0
34:18/0 = 0
35:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
32:19/0 = 0
33:19/0 = 0
34:19/0 = 0
35:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
31:20/0 = 0
32:20/0 = 0
33:20/0 = 0
34:20/0 = 0
35:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
10:21/0 = 0
13:21/0 = 0
14:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
32:21/0 = 0
33:21/0 = 0
34:21/0 = 0
35:21/0 = 0
36:21/0 = 0
42:21/0 = 0
43:21/0 = 0
44:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
10:22/0 = 0
13:22/0 = 0
14:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
31:22/0 = 0
32:22/0 = 0
33:22/0 = 0
34:22/0 = 0
35:22/0 = 0
36:22/0 = 0
37:22/0 = 0
41:22/0 = 0
42:22/0 = 0
43:22/0 = 0
44:22/0 = 0
45:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
10:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
31:23/0 = 0
32:23/0 = 0
33:23/0 = 0
34:23/0 = 0
35:23/0 = 0
36:23/0 = 0
37:23/0 = 0
38:23/0 = 0
40:23/0 = 0
41:23/0 = 0
42:23/0 = 0
43:23/0 = 0
44:23/0 = 0
45:23/0 = 0
46:23/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
22:24/0 = 0
23:24/0 = 0
26:24/0 = 0
27:24/0 = 0
30:24/0 = 0
31:24/0 = 0
32:24/0 = 0
33:24/0 = 0
34:24/0 = 0
35:24/0 = 0
36:24/0 = 0
37:24/0 = 0
38:24/0 = 0
39:24/0 = 0
40:24/0 = 0
41:24/0 = 0
42:24/0 = 0
43:24/0 = 0
44:24/0 = 0
45:24/0 = 0
46:24/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
23:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
28:25/0 = 0
30:25/0 = 0
31:25/0 = 0
32:25/0 = 0
33:25/0 = 0
34:25/0 = 0
35:25/0 = 0
36:25/0 = 0
37:25/0 = 0
38:25/0 = 0
39:25/0 = 0
40:25/0 = 0
41:25/0 = 0
42:25/0 = 0
43:25/0 = 0
44:25/0 = 0
45:25/0 = 0
46:25/0 = 0
47:25/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
24:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
28:26/0 = 0
29:26/0 = 0
30:26/0 = 0
31:26/0 = 0
32:26/0 = 0
33:26/0 = 0
34:26/0 = 0
35:26/0 = 0
36:26/0 = 0
37:26/0 = 0
38:26/0 = 0
39:26/0 = 0
40:26/0 = 0
41:26/0 = 0
42:26/0 = 0
43:26/0 = 0
44:26/0 = 0
45:26/0 = 0
46:26/0 = 0
47:26/0 = 0
24:27/0 = 0
25:27/0 = 0
26:27/0 = 0
27:27/0 = 0
28:27/0 = 0
29:27/0 = 0
31:27/0 = 0
32:27/0 = 0
33:27/0 = 0
34:27/0 = 0
35:27/0 = 0
36:27/0 = 0
37:27/0 = 0
38:27/0 = 0
39:27/0 = 0
40:27/0 = 0
41:27/0 = 0
42:27/0 = 0
43:27/0 = 0
44:27/0 = 0
45:27/0 = 0
46:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
24:28/0 = 0
25:28/0 = 0
26:28/0 = 0
27:28/0 = 0
28:28/0 = 0
29:28/0 = 0
31:28/0 = 0
32:28/0 = 0
33:28/0 = 0
34:28/0 = 0
35:28/0 = 0
36:28/0 = 0
37:28/0 = 0
40:28/0 = 0
41:28/0 = 0
42:28/0 = 0
43:28/0 = 0
44:28/0 = 0
45:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
14:29/0 = 0
24:29/0 = 0
25:29/0 = 0
26:29/0 = 0
27:29/0 = 0
28:29/0 = 0
29:29/0 = 0
32:29/0 = 0
33:29/0 = 0
34:29/0 = 0
35:29/0 = 0
36:29/0 = 0
40:29/0 = 0
41:29/0 = 0
42:29/0 = 0
43:29/0 = 0
44:29/0 = 0
45:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
14:30/0 = 0
15:30/0 = 0
16:30/0 = 0
17:30/0 = 0
18:30/0 = 0
19:30/0 = 0
20:30/0 = 0
21:30/0 = 0
22:30/0 = 0
23:30/0 = 0
24:30/0 = 0
25:30/0 = 0
26:30/0 = 0
27:30/0 = 0
28:30/0 = 0
29:30/0 = 0
30:30/0 = 0
31:30/0 = 0
32:30/0 = 0
33:30/0 = 0
34:30/0 = 0
35:30/0 = 0
36:30/0 = 0
37:30/0 = 0
38:30/0 = 0
39:30/0 = 0
40:30/0 = 0
41:30/0 = 0
42:30/0 = 0
43:30/0 = 0
44:30/0 = 0
45:30/0 = 0
46:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
16:31/0 = 0
17:31/0 = 0
18:31/0 = 0
19:31/0 = 0
20:31/0 = 0
21:31/0 = 0
22:31/0 = 0
23:31/0 = 0
24:31/0 = 0
25:31/0 = 0
26:31/0 = 0
27:31/0 = 0
28:31/0 = 0
29:31/0 = 0
30:31/0 = 0
31:31/0 = 0
32:31/0 = 0
33:31/0 = 0
34:31/0 = 0
35:31/0 = 0
36:31/0 = 0
37:31/0 = 0
38:31/0 = 0
39:31/0 = 0
40:31/0 = 0
41:31/0 = 0
42:31/0 = 0
43:31/0 = 0
44:31/0 = 0
45:31/0 = 0
46:31/0 = 0
47:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
14:32/0 = 0
15:32/0 = 0
16:32/0 = 0
17:32/0 = 0
18:32/0 = 0
19:32/0 = 0
20:32/0 = 0
21:32/0 = 0
22:32/0 = 0
23:32/0 = 0
24:32/0 = 0
25:32/0 = 0
26:32/0 = 0
27:32/0 = 0
28:32/0 = 0
29:32/0 = 0
30:32/0 = 0
31:32/0 = 0
32:32/0 = 0
33:32/0 = 0
34:32/0 = 0
35:32/0 = 0
36:32/0 = 0
37:32/0 = 0
38:32/0 = 0
39:32/0 = 0
40:32/0 = 0
41:32/0 = 0
42:32/0 = 0
43:32/0 = 0
44:32/0 = 0
45:32/0 = 0
46:32/0 = 0
47:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
15:33/0 = 0
16:33/0 = 0
17:33/0 = 0
18:33/0 = 0
19:33/0 = 0
20:33/0 = 0
21:33/0 = 0
22:33/0 = 0
23:33/0 = 0
25:33/0 = 0
26:33/0 = 0
28:33/0 = 0
29:33/0 = 0
30:33/0 = 0
31:33/0 = 0
32:33/0 = 0
33:33/0 = 0
34:33/0 = 0
35:33/0 = 0
36:33/0 = 0
37:33/0 = 0
38:33/0 = 0
39:33/0 = 0
40:33/0 = 0
41:33/0 = 0
42:33/0 = 0
43:33/0 = 0
44:33/0 = 0
45:33/0 = 0
46:33/0 = 0
47:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
12:34/0 = 0
15:34/0 = 0
16:34/0 = 0
17:34/0 = 0
18:34/0 = 0
19:34/0 = 0
20:34/0 = 0
21:34/0 = 0
22:34/0 = 0
23:34/0 = 0
25:34/0 = 0
26:34/0 = 0
28:34/0 = 0
29:34/0 = 0
30:34/0 = 0
31:34/0 = 0
32:34/0 = 0
33:34/0 = 0
34:34/0 = 0
35:34/0 = 0
36:34/0 = 0
37:34/0 = 0
38:34/0 = 0
39:34/0 = 0
40:34/0 = 0
41:34/0 = 0
42:34/0 = 0
43:34/0 = 0
44:34/0 = 0
45:34/0 = 0
46:34/0 = 0
47:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
12:35/0 = 0
15:35/0 = 0
16:35/0 = 0
17:35/0 = 0
18:35/0 = 0
19:35/0 = 0
20:35/0 = 0
21:35/0 = 0
22:35/0 = 0
23:35/0 = 0
24:35/0 = 0
25:35/0 = 0
26:35/0 = 0
27:35/0 = 0
28:35/0 = 0
29:35/0 = 0
30:35/0 = 0
31:35/0 = 0
32:35/0 = 0
33:35/0 = 0
34:35/0 = 0
35:35/0 = 0
36:35/0 = 0
37:35/0 = 0
38:35/0 = 0
39:35/0 = 0
40:35/0 = 0
41:35/0 = 0
42:35/0 = 0
43:35/0 = 0
44:35/0 = 0
45:35/0 = 0
46:35/0 = 0
47:35/0 = 0
25:36/0 = 0
26:36/0 = 0
30:36/0 = 0
31:36/0 = 0
33:36/0 = 0
34:36/0 = 0
36:36/0 = 0
37:36/0 = 0
39:36/0 = 0
40:36/0 = 0
41:36/0 = 0
42:36/0 = 0
43:36/0 = 0
44:36/0 = 0
45:36/0 = 0
46:36/0 = 0
47:36/0 = 0
25:37/0 = 0
26:37/0 = 0
30:37/0 = 0
31:37/0 = 0
32:37/0 = 0
33:37/0 = 0
34:37/0 = 0
35:37/0 = 0
36:37/0 = 0
37:37/0 = 0
38:37/0 = 0
39:37/0 = 0
40:37/0 = 0
41:37/0 = 0
42:37/0 = 0
43:37/0 = 0
44:37/0 = 0
45:37/0 = 0
46:37/0 = 0
47:37/0 = 0
0:38/0 = 0
1:38/0 = 0
2:38/0 = 0
3:38/0 = 0
4:38/0 = 0
5:38/0 = 0
6:38/0 = 0
7:38/0 = 0
8:38/0 = 0
9:38/0 = 0
10:38/0 = 0
11:38/0 = 0
12:38/0 = 0
13:38/0 = 0
14:38/0 = 0
24:38/0 = 0
25:38/0 = 0
26:38/0 = 0
30:38/0 = 0
31:38/0 = 0
32:38/0 = 0
33:38/0 = 0
34:38/0 = 0
35:38/0 = 0
36:38/0 = 0
37:38/0 = 0
38:38/0 = 0
39:38/0 = 0
40:38/0 = 0
41:38/0 = 0
42:38/0 = 0
43:38/0 = 0
44:38/0 = 0
45:38/0 = 0
46:38/0 = 0
47:38/0 = 0
0:39/0 = 0
1:39/0 = 0
2:39/0 = 0
3:39/0 = 0
4:39/0 = 0
5:39/0 = 0
6:39/0 = 0
7:39/0 = 0
8:39/0 = 0
9:39/0 = 0
10:39/0 = 0
11:39/0 = 0
12:39/0 = 0
13:39/0 = 0
14:39/0 = 0
19:39/0 = 0
22:39/0 = 0
0:40/0 = 0
1:40/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
8:40/0 = 0
9:40/0 = 0
10:40/0 = 0
11:40/0 = 0
12:40/0 = 0
13:40/0 = 0
14:40/0 = 0
19:40/0 = 0
22:40/0 = 0
45:40/0 = 0
46:40/0 = 0
0:41/0 = 0
1:41/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
8:41/0 = 0
9:41/0 = 0
10:41/0 = 0
11:41/0 = 0
12:41/0 = 0
13:41/0 = 0
14:41/0 = 0
19:41/0 = 0
22:41/0 = 0
25:41/0 = 0
26:41/0 = 0
27:41/0 = 0
34:41/0 = 0
35:41/0 = 0
36:41/0 = 0
39:41/0 = 0
40:41/0 = 0
41:41/0 = 0
42:41/0 = 0
43:41/0 = 0
44:41/0 = 0
45:41/0 = 0
46:41/0 = 0
47:41/0 = 0
18:42/0 = 0
19:42/0 = 0
20:42/0 = 0
21:42/0 = 0
22:42/0 = 0
23:42/0 = 0
24:42/0 = 0
25:42/0 = 0
26:42/0 = 0
27:42/0 = 0
28:42/0 = 0
29:42/0 = 0
30:42/0 = 0
31:42/0 = 0
33:42/0 = 0
34:42/0 = 0
35:42/0 = 0
36:42/0 = 0
37:42/0 = 0
38:42/0 = 0
39:42/0 = 0
40:42/0 = 0
41:42/0 = 0
42:42/0 = 0
43:42/0 = 0
44:42/0 = 0
45:42/0 = 0
46:42/0 = 0
47:42/0 = 0
0:43/0 = 0
1:43/0 = 0
2:43/0 = 0
3:43/0 = 0
4:43/0 = 0
5:43/0 = 0
12:43/0 = 0
13:43/0 = 0
14:43/0 = 0
15:43/0 = 0
16:43/0 = 0
17:43/0 = 0
18:43/0 = 0
19:43/0 = 0
20:43/0 = 0
21:43/0 = 0
22:43/0 = 0
23:43/0 = 0
24:43/0 = 0
25:43/0 = 0
26:43/0 = 0
27:43/0 = 0
28:43/0 = 0
29:43/0 = 0
30:43/0 = 0
31:43/0 = 0
32:43/0 = 0
33:43/0 = 0
34:43/0 = 0
35:43/0 = 0
36:43/0 = 0
37:43/0 = 0
38:43/0 = 0
39:43/0 = 0
40:43/0 = 0
41:43/0 = 0
42:43/0 = 0
43:43/0 = 0
44:43/0 = 0
45:43/0 = 0
46:43/0 = 0
47:43/0 = 0
0:44/0 = 0
1:44/0 = 0
2:44/0 = 0
3:44/0 = 0
4:44/0 = 0
5:44/0 = 0
12:44/0 = 0
13:44/0 = 0
14:44/0 = 0
15:44/0 = 0
16:44/0 = 0
17:44/0 = 0
18:44/0 = 0
19:44/0 = 0
20:44/0 = 0
21:44/0 = 0
22:44/0 = 0
23:44/0 = 0
24:44/0 = 0
25:44/0 = 0
26:44/0 = 0
27:44/0 = 0
28:44/0 = 0
29:44/0 = 0
30:44/0 = 0
31:44/0 = 0
32:44/0 = 0
33:44/0 = 0
34:44/0 = 0
35:44/0 = 0
36:44/0 = 0
37:44/0 = 0
38:44/0 = 0
39:44/0 = 0
40:44/0 = 0
41:44/0 = 0
42:44/0 = 0
43:44/0 = 0
44:44/0 = 0
45:44/0 = 0
46:44/0 = 0
0:45/0 = 0
1:45/0 = 0
2:45/0 = 0
3:45/0 = 0
4:45/0 = 0
5:45/0 = 0
6:45/0 = 0
7:45/0 = 0
8:45/0 = 0
9:45/0 = 0
10:45/0 = 0
11:45/0 = 0
13:45/0 = 0
16:45/0 = 0
24:45/0 = 0
25:45/0 = 0
26:45/0 = 0
27:45/0 = 0
28:45/0 = 0
29:45/0 = 0
30:45/0 = 0
31:45/0 = 0
32:45/0 = 0
33:45/0 = 0
34:45/0 = 0
35:45/0 = 0
36:45/0 = 0
37:45/0 = 0
38:45/0 = 0
39:45/0 = 0
40:45/0 = 0
41:45/0 = 0
42:45/0 = 0
43:45/0 = 0
44:45/0 = 0
0:46/0 = 0
1:46/0 = 0
2:46/0 = 0
3:46/0 = 0
4:46/0 = 0
5:46/0 = 0
6:46/0 = 0
7:46/0 = 0
8:46/0 = 0
9:46/0 = 0
10:46/0 = 0
11:46/0 = 0
12:46/0 = 0
13:46/0 = 0
14:46/0 = 0
15:46/0 = 0
16:46/0 = 0
17:46/0 = 0
18:46/0 = 0
19:46/0 = 0
20:46/0 = 0
24:46/0 = 0
25:46/0 = 0
26:46/0 = 0
27:46/0 = 0
28:46/0 = 0
29:46/0 = 0
30:46/0 = 0
31:46/0 = 0
32:46/0 = 0
33:46/0 = 0
34:46/0 = 0
35:46/0 = 0
36:46/0 = 0
37:46/0 = 0
38:46/0 = 0
39:46/0 = 0
40:46/0 = 0
41:46/0 = 0
42:46/0 = 0
43:46/0 = 0
44:46/0 = 0
0:47/0 = 0
1:47/0 = 0
2:47/0 = 0
3:47/0 = 0
4:47/0 = 0
5:47/0 = 0
6:47/0 = 0
7:47/0 = 0
8:47/0 = 0
9:47/0 = 0
10:47/0 = 0
11:47/0 = 0
12:47/0 = 0
13:47/0 = 0
14:47/0 = 0
15:47/0 = 0
16:47/0 = 0
17:47/0 = 0
18:47/0 = 0
19:47/0 = 0
20:47/0 = 0
25:47/0 = 0
26:47/0 = 0
27:47/0 = 0
28:47/0 = 0
29:47/0 = 0
30:47/0 = 0
31:47/0 = 0
33:47/0 = 0
34:47/0 = 0
35:47/0 = 0
36:47/0 = 0
37:47/0 = 0
38:47/0 = 0
39:47/0 = 0
40:47/0 = 0
41:47/0 = 0
42:47/0 = 0
43:47/0 = 0
44:47/0 = 0

[sub_resource type="TileSet" id="TileSet_f6p3j"]
sources/0 = SubResource("TileSetAtlasSource_3c7ns")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krlcy"]
size = Vector2(43.5, 37)

[sub_resource type="GDScript" id="GDScript_oedne"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umm12"]
size = Vector2(171.5, 94)

[node name="BossFight" type="Node2D"]
script = ExtResource("1_10qt2")

[node name="BossRoomReal" parent="." instance=ExtResource("2_cj46h")]
position = Vector2(152, 479)
scale = Vector2(0.25, 0.25)

[node name="Player" parent="." instance=ExtResource("3_efvos")]
position = Vector2(-1218, 659)
collision_mask = 2147483710

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -1817.0
offset_top = 645.0
offset_right = -1498.0
offset_bottom = 672.0

[node name="TileMap" type="TileMap" parent="."]
z_index = 10
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_f6p3j")
format = 2
layer_0/tile_data = PackedInt32Array(982990, 196608, 28, 1048526, 196608, 29, 1114062, 196608, 30, 1179598, 196608, 31, 1245134, 196608, 32, 1310670, 196608, 33, 1376206, 196608, 34, 1441742, 196608, 35, 982991, 262144, 28, 1048527, 262144, 29, 1114063, 262144, 30, 1179599, 262144, 31, 1245135, 262144, 32, 1310671, 262144, 33, 1376207, 262144, 34, 1441743, 262144, 35, 982992, 327680, 28, 1048528, 327680, 29, 1114064, 327680, 30, 1179600, 327680, 31, 1245136, 327680, 32, 1310672, 327680, 33, 1376208, 327680, 34, 1441744, 327680, 35, 983011, 0, 28, 1048547, 0, 29, 1114083, 0, 30, 1179619, 0, 31, 1245155, 0, 32, 1310691, 0, 33, 1376227, 0, 34, 1441763, 0, 35, 983012, 65536, 28, 1048548, 65536, 29, 1114084, 65536, 30, 1179620, 65536, 31, 1245156, 65536, 32, 1310692, 65536, 33, 1376228, 65536, 34, 1441764, 65536, 35, 983013, 131072, 28, 1048549, 131072, 29, 1114085, 131072, 30, 1179621, 131072, 31, 1245157, 131072, 32, 1310693, 131072, 33, 1376229, 131072, 34, 1441765, 131072, 35, 1114161, 0, 28, 1179697, 0, 29, 1245233, 0, 30, 1310769, 0, 31, 1376305, 0, 32, 1441841, 0, 33, 1507377, 0, 34, 1572913, 0, 35, 1114162, 65536, 28, 1179698, 65536, 29, 1245234, 65536, 30, 1310770, 65536, 31, 1376306, 65536, 32, 1441842, 65536, 33, 1507378, 65536, 34, 1572914, 65536, 35, 1114163, 131072, 28, 1179699, 131072, 29, 1245235, 131072, 30, 1310771, 131072, 31, 1376307, 131072, 32, 1441843, 131072, 33, 1507379, 131072, 34, 1572915, 131072, 35, 1114142, 196608, 28, 1179678, 196608, 29, 1245214, 196608, 30, 1310750, 196608, 31, 1376286, 196608, 32, 1441822, 196608, 33, 1507358, 196608, 34, 1572894, 196608, 35, 1114143, 262144, 28, 1179679, 262144, 29, 1245215, 262144, 30, 1310751, 262144, 31, 1376287, 262144, 32, 1441823, 262144, 33, 1507359, 262144, 34, 1572895, 262144, 35, 1114144, 327680, 28, 1179680, 327680, 29, 1245216, 327680, 30, 1310752, 327680, 31, 1376288, 327680, 32, 1441824, 327680, 33, 1507360, 327680, 34, 1572896, 327680, 35)

[node name="StaticBody2D2" type="StaticBody2D" parent="TileMap"]
collision_layer = 2
collision_mask = 125

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/StaticBody2D2"]
position = Vector2(-776, 327.5)
shape = SubResource("RectangleShape2D_krlcy")

[node name="StaticBody2D3" type="StaticBody2D" parent="TileMap"]
collision_layer = 2
collision_mask = 125

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/StaticBody2D3"]
position = Vector2(-440, 329)
shape = SubResource("RectangleShape2D_krlcy")

[node name="StaticBody2D4" type="StaticBody2D" parent="TileMap"]
collision_layer = 2
collision_mask = 125

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/StaticBody2D4"]
position = Vector2(504, 376)
shape = SubResource("RectangleShape2D_krlcy")

[node name="StaticBody2D7" type="StaticBody2D" parent="TileMap"]
collision_layer = 2
collision_mask = 125

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/StaticBody2D7"]
position = Vector2(807.5, 374.5)
shape = SubResource("RectangleShape2D_krlcy")

[node name="End_Game" type="Area2D" parent="."]
collision_layer = 2147483648
script = SubResource("GDScript_oedne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="End_Game"]
position = Vector2(-1215, 22)
shape = SubResource("RectangleShape2D_umm12")

[node name="end_game" type="TextEdit" parent="End_Game"]
visible = false
offset_left = -1064.0
offset_top = -154.0
offset_right = -815.0
offset_bottom = 120.0
text = "Press Enter to Free the Dragon"

[node name="end_game2" type="TextEdit" parent="End_Game"]
visible = false
offset_left = 1503.0
offset_top = -168.0
offset_right = 1752.0
offset_bottom = 106.0
text = "Press Enter to Free the Dragon"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="End_Game"]
position = Vector2(1277, 24)
shape = SubResource("RectangleShape2D_umm12")

[node name="Boss" parent="." instance=ExtResource("4_cvhi0")]
position = Vector2(-1226, 37)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mex8g")
volume_db = -20.0

[node name="burning" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_42uki")
volume_db = -20.0

[node name="freezing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_m0v3b")

[connection signal="body_entered" from="End_Game" to="." method="_on_end_game_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
